--- a/nestjs-demo/package.json
+++ b/nestjs-demo/package.json
@@ -31,6 +31,7 @@
     "@nestjs/config": "^2.3.2",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@nestjs/typeorm": "^9.0.1",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/js-yaml": "^4.0.5",
@@ -40,6 +41,7 @@
     "@types/webpack-env": "^1.18.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
+    "config": "^3.3.9",
     "cross-env": "^7.0.3",
     "dotenv": "^16.1.4",
     "eslint": "^8.0.1",
@@ -47,8 +49,10 @@
     "eslint-plugin-prettier": "^4.0.0",
     "express": "^4.18.2",
     "jest": "29.3.1",
+    "joi": "^17.9.2",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
+    "mysql2": "^3.3.4",
     "prettier": "^2.3.2",
     "run-script-webpack-plugin": "^0.1.1",
     "source-map-support": "^0.5.20",
@@ -57,6 +61,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.1",
+    "typeorm": "^0.3.16",
     "typescript": "^4.7.4",
     "webpack": "^5.75.0",
     "webpack-node-externals": "^3.0.0"
