--- a/nestjs-demo/package.json
+++ b/nestjs-demo/package.json
@@ -23,11 +23,15 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/core": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "nest-winston": "^1.9.2",
     "nestjs-pino": "^3.3.0",
     "pino-pretty": "^10.0.0",
     "pino-roll": "1.0.0-rc.1",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "request-ip": "^3.3.0",
+    "rxjs": "^7.2.0",
+    "winston": "^3.9.0",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
