--- a/nestjs-demo/package.json
+++ b/nestjs-demo/package.json
@@ -1,94 +1,95 @@
 {
-  "name": "nestjs-demo",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
-  "private": true,
-  "license": "UNLICENSED",
-  "scripts": {
-    "build": "nest build",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "cross-env NODE_ENV=development nest build --webpack --webpackPath webpack-hmr.config.js --watch",
-    "start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
-    "start:prod": "cross-env NODE_ENV=production node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
-    "typeorm": "typeorm-ts-node-commonjs"
-  },
-  "dependencies": {
-    "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
-    "nest-winston": "^1.9.2",
-    "nestjs-pino": "^3.3.0",
-    "pino-pretty": "^10.0.0",
-    "pino-roll": "1.0.0-rc.1",
-    "reflect-metadata": "^0.1.13",
-    "request-ip": "^3.3.0",
-    "rxjs": "^7.2.0",
-    "winston": "^3.9.0",
-    "winston-daily-rotate-file": "^4.7.1"
-  },
-  "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/config": "^2.3.2",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
-    "@nestjs/typeorm": "^9.0.1",
-    "@types/express": "^4.17.13",
-    "@types/jest": "29.2.4",
-    "@types/js-yaml": "^4.0.5",
-    "@types/lodash": "^4.14.195",
-    "@types/node": "18.11.18",
-    "@types/supertest": "^2.0.11",
-    "@types/webpack-env": "^1.18.0",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "config": "^3.3.9",
-    "cross-env": "^7.0.3",
-    "dotenv": "^16.1.4",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "express": "^4.18.2",
-    "jest": "29.3.1",
-    "joi": "^17.9.2",
-    "js-yaml": "^4.1.0",
-    "lodash": "^4.17.21",
-    "mysql2": "^3.3.4",
-    "prettier": "^2.3.2",
-    "run-script-webpack-plugin": "^0.1.1",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
-    "ts-jest": "29.0.3",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "4.1.1",
-    "typeorm": "^0.3.16",
-    "typescript": "^4.7.4",
-    "webpack": "^5.75.0",
-    "webpack-node-externals": "^3.0.0"
-  },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
-  }
+   "name": "nestjs-demo",
+   "version": "0.0.1",
+   "description": "",
+   "author": "",
+   "private": true,
+   "license": "UNLICENSED",
+   "scripts": {
+      "build": "nest build",
+      "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+      "start": "ts-node src/index.ts",
+      "start:dev": "cross-env NODE_ENV=development nest build --webpack --webpackPath webpack-hmr.config.js --watch",
+      "start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
+      "start:prod": "cross-env NODE_ENV=production node dist/main",
+      "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+      "test": "jest",
+      "test:watch": "jest --watch",
+      "test:cov": "jest --coverage",
+      "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+      "test:e2e": "jest --config ./test/jest-e2e.json",
+      "typeorm": "typeorm-ts-node-commonjs"
+   },
+   "dependencies": {
+      "@nestjs/common": "^9.0.0",
+      "@nestjs/core": "^9.0.0",
+      "@nestjs/platform-express": "^9.0.0",
+      "nest-winston": "^1.9.2",
+      "nestjs-pino": "^3.3.0",
+      "pino-pretty": "^10.0.0",
+      "pino-roll": "1.0.0-rc.1",
+      "reflect-metadata": "^0.1.13",
+      "request-ip": "^3.3.0",
+      "rxjs": "^7.2.0",
+      "winston": "^3.9.0",
+      "winston-daily-rotate-file": "^4.7.1",
+      "typeorm": "0.3.16"
+   },
+   "devDependencies": {
+      "@nestjs/cli": "^9.0.0",
+      "@nestjs/config": "^2.3.2",
+      "@nestjs/schematics": "^9.0.0",
+      "@nestjs/testing": "^9.0.0",
+      "@nestjs/typeorm": "^9.0.1",
+      "@types/express": "^4.17.13",
+      "@types/jest": "29.2.4",
+      "@types/js-yaml": "^4.0.5",
+      "@types/lodash": "^4.14.195",
+      "@types/node": "^16.11.10",
+      "@types/supertest": "^2.0.11",
+      "@types/webpack-env": "^1.18.0",
+      "@typescript-eslint/eslint-plugin": "^5.0.0",
+      "@typescript-eslint/parser": "^5.0.0",
+      "config": "^3.3.9",
+      "cross-env": "^7.0.3",
+      "dotenv": "^16.1.4",
+      "eslint": "^8.0.1",
+      "eslint-config-prettier": "^8.3.0",
+      "eslint-plugin-prettier": "^4.0.0",
+      "express": "^4.18.2",
+      "jest": "29.3.1",
+      "joi": "^17.9.2",
+      "js-yaml": "^4.1.0",
+      "lodash": "^4.17.21",
+      "mysql2": "^3.3.4",
+      "prettier": "^2.3.2",
+      "run-script-webpack-plugin": "^0.1.1",
+      "source-map-support": "^0.5.20",
+      "supertest": "^6.1.3",
+      "ts-jest": "29.0.3",
+      "ts-loader": "^9.2.3",
+      "ts-node": "10.7.0",
+      "tsconfig-paths": "4.1.1",
+      "typeorm": "^0.3.16",
+      "typescript": "4.5.2",
+      "webpack": "^5.75.0",
+      "webpack-node-externals": "^3.0.0"
+   },
+   "jest": {
+      "moduleFileExtensions": [
+         "js",
+         "json",
+         "ts"
+      ],
+      "rootDir": "src",
+      "testRegex": ".*\\.spec\\.ts$",
+      "transform": {
+         "^.+\\.(t|j)s$": "ts-jest"
+      },
+      "collectCoverageFrom": [
+         "**/*.(t|j)s"
+      ],
+      "coverageDirectory": "../coverage",
+      "testEnvironment": "node"
+   }
 }
