--- a/nestjs-demo/package.json
+++ b/nestjs-demo/package.json
@@ -11,14 +11,19 @@
       "start": "ts-node src/index.ts",
       "start:dev": "cross-env NODE_ENV=development nest build --webpack --webpackPath webpack-hmr.config.js --watch",
       "start:debug": "cross-env NODE_ENV=development nest start --debug --watch",
-      "start:prod": "cross-env NODE_ENV=production node dist/main",
+      "start:prod": "cross-env NODE_ENV=production node dist/src/main",
       "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
       "test": "jest",
       "test:watch": "jest --watch",
       "test:cov": "jest --coverage",
       "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
       "test:e2e": "jest --config ./test/jest-e2e.json",
-      "typeorm": "typeorm-ts-node-commonjs"
+      "typeorm": "typeorm-ts-node-commonjs",
+      "migration:generate": "f() { npm run typeorm migration:generate -p \"./src/migrations/$@\"; }; f",
+      "migration:create": "typeorm-ts-node-commonjs migration:create",
+      "migration:run": "npm run typeorm migration:run",
+      "migration:revert": "npm run typeorm migration:revert",
+      "schema:drop": "npm run typeorm schema:drop"
    },
    "dependencies": {
       "@nestjs/common": "^9.0.0",
